# run

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: default.json
design/: M00 Foundation.txt  M01_State_Manager_詳細設計.md  M02_Task_Queue_詳細設計.md  M03_Knowledge_Manager_詳細設計.md  M04 Permission Manager.txt  M05 Command Router.txt  M06 Planner.txt  M07 Architect.txt  M08 Design Auditor.txt  M09 Executor (Codex).txt  M10 Tester.txt  M11 PR Creator.txt  M12 Reviewer.txt  M13 Weekly Reviewer (Fable).txt  M14 Scheduler.txt  M15 Notification.txt  M16 Monitoring.txt  M17 Configuration Manager.txt  M18 Knowledge Manager.txt  M19 Context Manager.txt  M20 GitHub Manager.txt  M21 Slack Discord Connector.txt
docs/: AI Autonomous Development Platform.docx  AI Development Pipeline 引継ぎドキュメント.docx  CHANGELOG.md  DESIGN_FREEZE_v1.0.md  ROADMAP_v1.1.md
implementation_spec/: IS00_Foundation_実装仕様書.md  IS01_State_Manager_実装仕様書.md  IS02_Task_Queue_実装仕様書.md  IS03_Knowledge_Manager_実装仕様書.md  IS04_Permission_Manager_実装仕様書.md  IS05_Command_Router_実装仕様書.md  IS06_Planner_実装仕様書.md  IS07_Architect_実装仕様書.md  IS08_Design_Auditor_実装仕様書.md  IS09_Executor_実装仕様書.md  IS10_Tester_実装仕様書.md  IS11_PR_Creator_実装仕様書.md  IS12_Reviewer_実装仕様書.md  IS13_Weekly_Reviewer_実装仕様書.md  IS14_Scheduler_実装仕様書.md  IS15_Notification_実装仕様書.md  IS16_Monitoring_実装仕様書.md  IS17_Configuration_Manager_実装仕様書.md  IS18_Knowledge_Manager_DEPRECATED.md  IS19_Context_Manager_実装仕様書.md  IS20_GitHub_Manager_実装仕様書.md  IS21_Slack_Discord_Connector_実装仕様書.md
src/architect/: __init__.py  analyzer.py  designer.py  (+5 more)
(+275 files in other folders)
